--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <meta property="og:title" content="Bits" />
 <meta property="og:description" content="Endeavour&#39;s personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://www.example.com/" />
+<meta property="og:url" content="http://Endvour.github.io/" />
 
 
 
 
-<link rel="canonical" href="http://www.example.com/">
+<link rel="canonical" href="http://Endvour.github.io/">
 
 
 <link rel="preload" href="/fonts/forkawesome-webfont.woff2?v=1.2.0" as="font" type="font/woff2" crossorigin>
